--- a/week5/scss/_layout.scss
+++ b/week5/scss/_layout.scss
@@ -1,20 +1,24 @@
-.all {
-    margin: 0;
-
-    .col:first-child {
-        max-width: 296px;
-        width: 296px;
-        min-height: 100vh;
-        background-color: var(--bs-gray-100);
-        padding-block: var(--bs-gutter-y);
-    }
+.nav {
+    max-width: 296px;
+    width: 296px;
+    min-height: 100vh;
+    background-color: var(--bs-gray-100);
+    padding: 32px;
 
     .material-symbols-rounded {
         font-size: 24px;
     }
 
+    .logo {
+        margin-bottom: 4px;
+    }
+
     .menuBox {
         font-size: 16px;
         font-weight: bold;
+        gap: 16px;
+        margin-block: 28px;
     }
 }
+
+.layout>.d-flex {}
