--- a/week5/scss/_base.scss
+++ b/week5/scss/_base.scss
@@ -5,3 +5,15 @@
         'GRAD' 0,
         'opsz' 48
 }
+
+
+
+
+a {
+    color: var(--bs-gray-900);
+    text-decoration: none;
+
+    &:hover {
+        color: var(--bs-success);
+    }
+}
