--- a/week5/scss/_layout.scss
+++ b/week5/scss/_layout.scss
@@ -1,9 +1,9 @@
-.nav {
+.navBar {
     max-width: 296px;
     width: 296px;
     min-height: 100vh;
     background-color: var(--bs-gray-100);
-    padding: 32px;
+    padding: $padding;
 
     .material-symbols-rounded {
         font-size: 24px;
