--- a/week5/scss/_layout.scss
+++ b/week5/scss/_layout.scss
@@ -3,7 +3,7 @@
     width: 296px;
     min-height: 100vh;
     background-color: var(--bs-gray-100);
-    padding: 32px;
+    padding-block: $padding;
 
     .material-symbols-rounded {
         font-size: 24px;
@@ -21,4 +21,13 @@
     }
 }
 
-.layout>.d-flex {}
+.accountInfo {
+    .imgBox {
+        width: 40px;
+        height: 40px;
+    }
+
+    img {
+        border-radius: 50px;
+    }
+}
