--- a/week5/style.css
+++ b/week5/style.css
@@ -10,6 +10,35 @@
   --bs-gutter-y: 32px;
 }
 
+.mx-main {
+  margin-inline: 32px;
+}
+
+.my-main {
+  margin-block: 32px;
+}
+
+.imgBox {
+  width: -moz-fit-content;
+  width: fit-content;
+  height: auto;
+  overflow: hidden;
+}
+.imgBox img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  transition: transform 0.6s ease-in;
+}
+.imgBox.hover:hover img,
+.imgBox.hover:hover source,
+.imgBox.hover:hover svg {
+  transform: scale(1.2) translateY(-3px);
+}
+
 .material-symbols-rounded {
   font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 48;
 }
@@ -27,7 +56,7 @@ a:hover {
   width: 296px;
   min-height: 100vh;
   background-color: var(--bs-gray-100);
-  padding: 32px;
+  padding-block: 32px;
 }
 .nav .material-symbols-rounded {
   font-size: 24px;
@@ -40,4 +69,12 @@ a:hover {
   font-weight: bold;
   gap: 16px;
   margin-block: 28px;
+}
+
+.accountInfo .imgBox {
+  width: 40px;
+  height: 40px;
+}
+.accountInfo img {
+  border-radius: 50px;
 }/*# sourceMappingURL=style.css.map */
