--- a/week5/scss/_layout.scss
+++ b/week5/scss/_layout.scss
@@ -1,33 +1,34 @@
-.navBar {
+.navArea {
     max-width: 296px;
     width: 296px;
     min-height: 100vh;
     background-color: var(--bs-gray-100);
-    padding-block: $padding;
 
-    .material-symbols-rounded {
-        font-size: 24px;
-    }
 
     .logo {
         margin-bottom: 4px;
     }
 
     .menuBox {
-        font-size: 16px;
-        font-weight: bold;
         gap: 16px;
         margin-block: 28px;
     }
-}
 
-.accountInfo {
-    .imgBox {
-        width: 40px;
-        height: 40px;
+    li>.d-block.active {
+        border-left: 4px solid $color_main;
+        color: $color_main;
     }
 
-    img {
-        border-radius: 50px;
+    .accountInfo {
+        gap: 16px;
+
+        .imgBox {
+            width: 40px;
+            height: 40px;
+        }
+
+        img {
+            border-radius: 50px;
+        }
     }
 }
