--- a/week5/style.css
+++ b/week5/style.css
@@ -1,14 +1,37 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
-
 :root {
   --bs-body-font-family: "Lato", "Roboto Mono", sans-serif, monospace;
-  --bs-body-font-size: 14px;
+  --bs-body-font-size: 16px;
 }
 
 .row {
   --bs-gutter-x: 32px;
   --bs-gutter-y: 32px;
+}
+
+p {
+  margin-bottom: 0px;
+}
+
+.fs-1 {
+  font-size: 24px !important;
+}
+
+.fs-2 {
+  font-size: 20px !important;
+}
+
+.fs-3 {
+  font-size: 16px !important;
+}
+
+.fs-4 {
+  font-size: 14px !important;
+}
+
+.fs-5 {
+  font-size: 12px !important;
 }
 
 .mx-main {
@@ -19,23 +42,29 @@
   margin-block: 32px;
 }
 
+.px-main {
+  padding-inline: 32px;
+}
+
+.py-main {
+  padding-block: 32px;
+}
+
 .imgBox {
   width: -moz-fit-content;
   width: fit-content;
   height: auto;
   overflow: hidden;
 }
-
 .imgBox img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   -o-object-position: center;
-  object-position: center;
+     object-position: center;
   transition: transform 0.6s ease-in;
 }
-
 .imgBox.hover:hover img,
 .imgBox.hover:hover source,
 .imgBox.hover:hover svg {
@@ -50,39 +79,34 @@ a {
   color: var(--bs-gray-900);
   text-decoration: none;
 }
-
 a:hover {
   color: var(--bs-success);
 }
 
-.navBar {
+.navArea {
   max-width: 296px;
   width: 296px;
   min-height: 100vh;
   background-color: var(--bs-gray-100);
-  padding-block: 32px;
 }
-
-.navBar .material-symbols-rounded {
-  font-size: 24px;
-}
-
-.navBar .logo {
+.navArea .logo {
   margin-bottom: 4px;
 }
-
-.navBar .menuBox {
-  font-size: 16px;
-  font-weight: bold;
+.navArea .menuBox {
   gap: 16px;
   margin-block: 28px;
 }
-
-.accountInfo .imgBox {
+.navArea li > .d-block.active {
+  border-left: 4px solid var(--bs-success);
+  color: var(--bs-success);
+}
+.navArea .accountInfo {
+  gap: 16px;
+}
+.navArea .accountInfo .imgBox {
   width: 40px;
   height: 40px;
 }
-
-.accountInfo img {
+.navArea .accountInfo img {
   border-radius: 50px;
-}
+}/*# sourceMappingURL=style.css.map */
