--- a/week5/style.scss
+++ b/week5/style.scss
@@ -1,5 +1,7 @@
+@import url('https://rawcdn.githack.com/lisashark/swimming/94ee2c354e8045ae65f193ebc5261050af38f707/reset.css');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css');
 @import './scss/variable';
 @import './scss/utility';
 @import './scss/component';
